Fix css in main page

--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@capacitor/core": "^1.0.0-beta.24",
     "@capacitor/ios": "^1.0.0-beta.24",
     "@ionic/react": "0.0.5",
+    "@material-ui/core": "^4.0.2",
     "@types/react-router": "^5.0.0",
     "@types/react-router-dom": "^4.3.3",
+    "material-ui": "^0.20.2",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
