--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "@material-ui/core": "^4.0.2",
     "@types/react-router": "^5.0.0",
     "@types/react-router-dom": "^4.3.3",
+    "google-map-react": "^1.1.4",
+    "google-maps-react": "^2.0.2",
     "material-ui": "^0.20.2",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-google-maps": "^9.4.5",
+    "react-native-maps": "^0.24.2",
     "react-redux": "^7.0.3",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
