--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "react-select": "^3.0.4",
+    "react-skeleton-loader": "^1.0.4",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
