--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@types/react-router": "^5.0.0",
     "@types/react-router-dom": "^4.3.3",
     "material-ui": "^0.20.2",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-datepicker": "^2.7.0",
+    "react-datetime": "^2.16.3",
     "react-dom": "^16.8.6",
     "react-input-range": "^1.3.0",
     "react-redux": "^7.0.3",
