--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/core": "^4.0.2",
     "@types/react-router": "^5.0.0",
     "@types/react-router-dom": "^4.3.3",
+    "google-map-react": "^1.1.4",
     "material-ui": "^0.20.2",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
