--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-router": "^5.0.0",
     "@types/react-router-dom": "^4.3.3",
     "google-map-react": "^1.1.4",
+    "google-maps-react": "^2.0.2",
     "material-ui": "^0.20.2",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
