--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-datepicker": "^2.7.0",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.8.6",
+    "react-geocode": "^0.1.2",
     "react-input-range": "^1.3.0",
     "react-redux": "^7.0.3",
     "react-router": "^5.0.0",
