--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^4.3.3",
     "google-map-react": "^1.1.4",
     "google-maps-react": "^2.0.2",
+    "lodash": "^4.17.11",
     "material-ui": "^0.20.2",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
